# bdk-services

./: .env  .env.dev  .env.prod  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  alice-key.json  bob-key.json  carol-key.json  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  start-bdk-service.sh
.github/workflows/: main.yml
src/: lib.rs  main.rs
src/hbdk/: errors.rs  mod.rs  util.rs
