[package]
name = "bdk-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = "0.17.0"
xyzpub = "0.2.1"
bitcoin = "0.27.0"
base64 = "0.13"
serde = "1.0.136"
bitcoin_hashes = "0.10.0"
miniscript = "6.0.1"
lazy_static = "1.4.0"
regex = "1.5.5"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
